{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 82,
  "lineage": "52a71776-c86e-57d0-f190-922d3ee5c2c2",
  "resources": [
    {
      "module": "module.nat-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-054667ecbc9484bb1",
            "arn": "arn:aws:ec2:us-east-1:130193131803:instance/i-0fe998d242d7b320e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe998d242d7b320e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "base-template",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a13ef054e69a3909",
            "private_dns": "ip-172-168-0-61.ec2.internal",
            "private_ip": "172.168.0.61",
            "public_dns": "ec2-3-89-184-19.compute-1.amazonaws.com",
            "public_ip": "3.89.184.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d7741ea7608f91ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ad0ad70e154e4c16",
            "tags": {
              "Name": "nat bastion host"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "nat bastion host"
            },
            "vpc_security_group_ids": [
              "sg-03938844914590328"
            ]
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "module.pub_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.igw-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:internet-gateway/igw-06110632040b34948",
            "id": "igw-06110632040b34948",
            "owner_id": "130193131803",
            "tags": {
              "Creation_Date": "August_14_2020",
              "Name": "sample-igw",
              "Template": "infrastructure-as-code"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "load-balancer-logs-elb-ed",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:130193131803:loadbalancer/app/sample-elb/0c39fb42015a1ea3",
            "arn_suffix": "app/sample-elb/0c39fb42015a1ea3",
            "dns_name": "sample-elb-886491630.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:130193131803:loadbalancer/app/sample-elb/0c39fb42015a1ea3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sample-elb",
            "security_groups": [
              "sg-09be60124ff4cf5ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ad0ad70e154e4c16"
              },
              {
                "subnet_id": "subnet-0f583953f1dcd300b"
              }
            ],
            "subnets": [
              "subnet-0ad0ad70e154e4c16",
              "subnet-0f583953f1dcd300b"
            ],
            "tags": {
            },
            "vpc_id": "vpc-0afb15ea7910b09da",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "module.pub_subnet_1.aws_subnet.subnet",
            "module.pub_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http-listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:130193131803:listener/app/sample-elb/0c39fb42015a1ea3/d6f41c65701e1c67",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:130193131803:targetgroup/sample-target-group/e535e04c14a738f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:130193131803:listener/app/sample-elb/0c39fb42015a1ea3/d6f41c65701e1c67",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:130193131803:loadbalancer/app/sample-elb/0c39fb42015a1ea3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "module.elb.aws_lb.elb",
            "module.new-vpc.aws_vpc.vpc",
            "module.pub_subnet_1.aws_subnet.subnet",
            "module.pub_subnet_2.aws_subnet.subnet",
            "module.target-group.aws_lb_target_group.target-group"
          ]
        }
      ]
    },
    {
      "module": "module.target-group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:130193131803:targetgroup/sample-target-group/e535e04c14a738f8",
            "arn_suffix": "targetgroup/sample-target-group/e535e04c14a738f8",
            "deregistration_delay": 400,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:130193131803:targetgroup/sample-target-group/e535e04c14a738f8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sample-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
            },
            "target_type": "instance",
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.publicRoutes",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06110632040b34948",
            "id": "r-rtb-094c25fa036d4542c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094c25fa036d4542c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.igw-vpc.aws_internet_gateway.igw",
            "module.new-vpc.aws_vpc.vpc",
            "module.publicRT.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.privateRoutes",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-010d263c0431d98321080289494",
            "instance_id": "i-0fe998d242d7b320e",
            "instance_owner_id": "130193131803",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0a13ef054e69a3909",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010d263c0431d9832",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "module.nat-ec2.aws_instance.ec2",
            "module.new-vpc.aws_vpc.vpc",
            "module.privateRT.aws_route_table.rt",
            "module.pub_subnet_2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.publicRT",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-094c25fa036d4542c",
            "owner_id": "130193131803",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06110632040b34948",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "template-1-autoscaling",
              "Creation_Date": "August_14_2020",
              "Environment": "dev",
              "Name": "public-route-table",
              "Purpose": "testing_autoscaling_modes",
              "Template": "infrastructure-as-code"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.privateRT",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010d263c0431d9832",
            "owner_id": "130193131803",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0fe998d242d7b320e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0a13ef054e69a3909",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "template-1-autoscaling",
              "Creation_Date": "August_14_2020",
              "Environment": "dev",
              "Name": "private-route-table",
              "Purpose": "testing_autoscaling_modes",
              "Template": "infrastructure-as-code"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rtToPriSubnet2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtAssociate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0652690b1d2fa891a",
            "route_table_id": "rtb-010d263c0431d9832",
            "subnet_id": "subnet-0b394fd3cb9d9132d"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pri_subnet_2.aws_subnet.subnet",
            "module.privateRT.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a63e4dc7447e4b1",
            "route_table_id": "rtb-010d263c0431d9832",
            "subnet_id": "subnet-04a5183a4a0bc9657"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pri_subnet_2.aws_subnet.subnet",
            "module.privateRT.aws_route_table.rt"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8e1dc7d3d978d1",
            "route_table_id": "rtb-010d263c0431d9832",
            "subnet_id": "subnet-0a41d882f9d421432"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pri_subnet_2.aws_subnet.subnet",
            "module.privateRT.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.rtToPubSubnet1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtAssociate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5261ac698952e5a",
            "route_table_id": "rtb-094c25fa036d4542c",
            "subnet_id": "subnet-0f583953f1dcd300b"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pub_subnet_1.aws_subnet.subnet",
            "module.publicRT.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.rtToPubSubnet2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtAssociate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ff646bd7046526f",
            "route_table_id": "rtb-094c25fa036d4542c",
            "subnet_id": "subnet-0ad0ad70e154e4c16"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pub_subnet_2.aws_subnet.subnet",
            "module.publicRT.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.rtToPriSubnet1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtAssociate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090a51c971dddfaca",
            "route_table_id": "rtb-010d263c0431d9832",
            "subnet_id": "subnet-0ab415cf8f5caa7d6"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pri_subnet_1.aws_subnet.subnet",
            "module.privateRT.aws_route_table.rt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d2c9942dbc90cc4",
            "route_table_id": "rtb-010d263c0431d9832",
            "subnet_id": "subnet-024878d2796ec7f24"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pri_subnet_1.aws_subnet.subnet",
            "module.privateRT.aws_route_table.rt"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a557455b63fa2e",
            "route_table_id": "rtb-010d263c0431d9832",
            "subnet_id": "subnet-0e9852b4c16a6b25e"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc",
            "module.pri_subnet_1.aws_subnet.subnet",
            "module.privateRT.aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:security-group/sg-09be60124ff4cf5ae",
            "description": "ELB security group for infrastructure-as-code in dev environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09be60124ff4cf5ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-dev",
            "name_prefix": "",
            "owner_id": "130193131803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "template-1-autoscaling",
              "Creation_Date": "August_14_2020",
              "Environment": "dev",
              "Name": "elb-dev",
              "Purpose": "testing_autoscaling_modes",
              "Template": "infrastructure-as-code"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:security-group/sg-03938844914590328",
            "description": "NAT security group for infrastructure-as-code in dev environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03938844914590328",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.168.0.160/27",
                  "172.168.0.192/27",
                  "172.168.0.224/27",
                  "172.168.0.64/27",
                  "172.168.0.96/27",
                  "172.168.0.128/27"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.168.0.224/27",
                  "172.168.0.192/27",
                  "172.168.0.160/27"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.168.0.64/27",
                  "172.168.0.96/27",
                  "172.168.0.128/27"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "80.112.143.163/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pub-dev",
            "name_prefix": "",
            "owner_id": "130193131803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "template-1-autoscaling",
              "Creation_Date": "August_14_2020",
              "Environment": "dev",
              "Name": "pub-dev",
              "Purpose": "testing_autoscaling_modes",
              "Template": "infrastructure-as-code"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:security-group/sg-07358f97f0639c4a6",
            "description": "WEB security group for dev environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07358f97f0639c4a6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03938844914590328"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03938844914590328"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09be60124ff4cf5ae"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pri-dev",
            "name_prefix": "",
            "owner_id": "130193131803",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "template-1-autoscaling",
              "Creation_Date": "August_14_2020",
              "Environment": "dev",
              "Name": "pri-dev",
              "Purpose": "testing_autoscaling_modes",
              "Template": "infrastructure-as-code"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-sg-rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2579160172",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09be60124ff4cf5ae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb-sg-rule-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-17387174",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09be60124ff4cf5ae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-sg-rule-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "80.112.143.163/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-4090542027",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03938844914590328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-sg-rule-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.168.0.64/27",
              "172.168.0.96/27",
              "172.168.0.128/27"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3615900336",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03938844914590328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nat-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-sg-rule-03",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.168.0.64/27",
              "172.168.0.96/27",
              "172.168.0.128/27"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-872426228",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03938844914590328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nat-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-sg-rule-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1370632245",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03938844914590328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-sg-rule-http-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.168.0.160/27",
              "172.168.0.192/27",
              "172.168.0.224/27"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-387648147",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03938844914590328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nat-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat-sg-rule-https-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.168.0.160/27",
              "172.168.0.192/27",
              "172.168.0.224/27"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3228011134",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03938844914590328",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nat-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web-sg-rule-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-4259084966",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07358f97f0639c4a6",
            "self": false,
            "source_security_group_id": "sg-03938844914590328",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "aws_security_group.web-sg",
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web-sg-rule-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1759700142",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07358f97f0639c4a6",
            "self": false,
            "source_security_group_id": "sg-03938844914590328",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nat-sg",
            "aws_security_group.web-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web-sg-rule-03",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1572238534",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07358f97f0639c4a6",
            "self": false,
            "source_security_group_id": "sg-09be60124ff4cf5ae",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_security_group.web-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web-sg-rule-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3083409097",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07358f97f0639c4a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pri_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-0b394fd3cb9d9132d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.168.0.160/27",
            "id": "subnet-0b394fd3cb9d9132d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "ha-subnet",
              "Name": "private-web-subnet-02",
              "Template": "infrastructure-as-code",
              "Type": "private"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-04a5183a4a0bc9657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.168.0.192/27",
            "id": "subnet-04a5183a4a0bc9657",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "ha-subnet",
              "Name": "private-app-subnet-02",
              "Template": "infrastructure-as-code",
              "Type": "private"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-0a41d882f9d421432",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.168.0.224/27",
            "id": "subnet-0a41d882f9d421432",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "ha-subnet",
              "Name": "private-db-subnet-02",
              "Template": "infrastructure-as-code",
              "Type": "private"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-0f583953f1dcd300b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.0.0/27",
            "id": "subnet-0f583953f1dcd300b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "main-subnet",
              "Name": "public-subnet-01",
              "Template": "infrastructure-as-code",
              "Type": "public"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pri_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-0ab415cf8f5caa7d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.0.64/27",
            "id": "subnet-0ab415cf8f5caa7d6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "main-subnet",
              "Name": "private-web-subnet-01",
              "Template": "infrastructure-as-code",
              "Type": "private"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-024878d2796ec7f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.0.96/27",
            "id": "subnet-024878d2796ec7f24",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "main-subnet",
              "Name": "private-app-subnet-01",
              "Template": "infrastructure-as-code",
              "Type": "private"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-0e9852b4c16a6b25e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.168.0.128/27",
            "id": "subnet-0e9852b4c16a6b25e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "main-subnet",
              "Name": "private-db-subnet-01",
              "Template": "infrastructure-as-code",
              "Type": "private"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:subnet/subnet-0ad0ad70e154e4c16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.168.0.32/27",
            "id": "subnet-0ad0ad70e154e4c16",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130193131803",
            "tags": {
              "Availability": "ha-subnet",
              "Name": "public-subnet-02",
              "Template": "infrastructure-as-code",
              "Type": "public"
            },
            "vpc_id": "vpc-0afb15ea7910b09da"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130193131803:vpc/vpc-0afb15ea7910b09da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/24",
            "default_network_acl_id": "acl-09c460e21c9914af8",
            "default_route_table_id": "rtb-01f38e5998b0ed41f",
            "default_security_group_id": "sg-0dbd358aee8ab5008",
            "dhcp_options_id": "dopt-3af28441",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0afb15ea7910b09da",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01f38e5998b0ed41f",
            "owner_id": "130193131803",
            "tags": {
              "Creation_Date": "August_14_2020",
              "Name": "terraform-deployment-vpc",
              "Purpose": "testing_autoscaling_modes",
              "Template": "infrastructure-as-code"
            }
          }
        }
      ]
    }
  ]
}